Release 1.0 (not yet)

- Query operations can now pass use_cache=False (see issue 156 comment 7).
- Add support for transaction propagation options (SDK 1.6.4).

----------------------------------------

Release 0.9.9

- Issue 164: Reduce log spam for exceptions in production.
- Issue 159: Make Model.__init__() signature more robust.
- Issue 163: String/TextProperty should not allow writing non-UTF-8 text.
- Issue 139: Enforce size limits for indexed text/blob properties.
- Issue 158: Support GenericProperty(compressed=True).
- Issue 156: Changed query cache policy (again).
- Issue 162: Raise an error on attempting to create a nested transaction.
- Issue 161: Make get_or_insert() use existing transaction if one exist.
- Fixed index_list() tests (were broken due to a last-minute runtime change).

----------------------------------------

Release 0.9.8

Final tweaks:

- Issue 149: Add get_indexes() API.
- Issue 152: Made @utils.wrapping() more robust.
- Moved @context.toplevel to @tasklets.toplevel.
- Made GQL honor the default_model in the adapter.
- Added demo/dataviewer.py.
- Added tasklets.make_context().
- Refactored imports to localize Google dependencies in one file.
- Refactored (old) test target in Makefile.
- Moved runtests.py to ndb/ndb_test.py.

----------------------------------------

Release 0.9.7

Noteworthy fixes and features:

- Issue 114: Add full GQL support.
- Issue 144: Full Blobstore API.
- The @transactional decorator now supports options, e.g.:
  @transactional(retries=1, xg=True).
- If the value for a StructuredProperty is None, an explicit None
  is written and can be queried for.
- New demo: guestbook.py.
- Added __all__ to all modules.
- Issue 145: Fix threading use in tests.

----------------------------------------

Release 0.9.6 (included in SDK 1.6.2)

Features, speedups and bugfixes.

- Issue 141: Speed up fetch(), especially for keys_only=True.
- Issue 140: Fix query for recursive structured property.